--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,6 @@
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
+    "tailwindcss": "^2.2.9"
   }
 }
