--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.4",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
@@ -45,5 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8"
+  }
 }
