--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
@@ -19,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
@@ -54,7 +58,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.10"
+    "postcss": "^7.0.36"
   }
 }
