apollo init, test api

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
