--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "concurrently \"nodemon app.js\" \"cd client & npm start\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
