--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "dev": "concurrently \"nodemon app.js\" \"cd client & npm start\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
