--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.10",
     "@craco/craco": "^6.2.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,8 +22,10 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
