--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
+    "aws-sdk": "^2.1028.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
@@ -24,7 +25,8 @@
     "graphql": "^15.5.1",
     "graphql-playground-middleware-express": "^1.7.22",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.2"
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
