--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.1",
+    "tailwindcss-children": "^2.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
