--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.4",
     "http-proxy-middleware": "^2.0.1",
+    "luxon": "^2.3.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
