--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^15.5.1",
     "graphql-playground-middleware-express": "^1.7.22",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.3.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3"
   },
