--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "concurrently \"nodemon app.js\" \"cd client & npm start\"",
+    "dev": "concurrently \"nodemon app.js\" \"cd client && npm start\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
