--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.10",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
