--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "concurrently \"nodemon app.js\" \"cd client && npm start\"",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -17,19 +16,22 @@
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
     "bcryptjs": "^2.4.3",
-    "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.5.1",
+    "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.22",
+    "graphql-yoga": "^3.3.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.1",
     "mongoose": "^6.0.12",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@types/react": "18.0.26",
+    "typescript": "4.9.4"
   }
 }
