--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
+    "autoprefixer": "^10.4.13",
     "aws-sdk": "^2.1028.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.22",
     "graphql-yoga": "^3.3.0",
@@ -27,8 +28,10 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "next": "^13.1.1",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/react": "18.0.26",
