migrate authentication, add cookies

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@reduxjs/toolkit": "^1.9.1",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "autoprefixer": "^10.4.13",
     "aws-sdk": "^2.1028.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "cookies-next": "^2.1.1",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.22",
