--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/jsonwebtoken": "^9.0.0",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "autoprefixer": "^10.4.13",
@@ -25,6 +26,7 @@
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.22",
     "graphql-yoga": "^3.3.0",
+    "jose": "^4.11.2",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.1",
     "mongoose": "^6.0.12",
