--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/jsonwebtoken": "^9.0.0",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
@@ -37,7 +40,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-children": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "18.0.26",
