--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cookies-next": "^2.1.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.22",
