--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "next": "^13.1.1",
+    "next-connect": "^0.13.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
