--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.2.4",
     "tailwindcss-children": "^2.1.0"
   },
