--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "graphql/resolvers/RootQuery.js",
     "pages/_app.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "client.old"]
 }
